update add or update page

--- a/addUpdatePost.html
+++ b/addUpdatePost.html
@@ -33,7 +33,7 @@
             <div class="col-6">
                 <!-- Form to add or update post -->
                  <section class="addPost">
-                    <h2>Add a Post</h2>
+                    <!--<h2>Add Post</h2>-->
                     <form id="postForm">
                         <div class="row">
                             <div class="col-6">
@@ -112,7 +112,7 @@
                     </form>
                  </section>
                  <section class="updatePost" style="display: none;">
-                    <h2>Update Post</h2>
+                    <!--<h2>Update Post</h2>-->
                     <form id="updatePostForm">
                         <div class="row">
                             <div class="col-6">
@@ -185,7 +185,7 @@
                         </div>
                         <div class="row">
                             <div class="col-12 text-right mt-2">
-                                <button id="addPost" class="btn bg-secondary">Update Post</button>
+                                <button id="upsatePost" class="btn bg-secondary">Update Post</button>
                             </div>
                         </div>
                     </form>
