--- a/userPost.html
+++ b/userPost.html
@@ -26,6 +26,7 @@
                 <h1 class="text-center text-light">Garage Mate</h1>
             </div>
             <div class="col-4 text-right">
+                <button id="newPost" class="btn btn-success text-right mt-2">New Post</button>
                 <button id="logout" class="btn btn-danger mt-2">Logout</button>
             </div>
         </div>
@@ -33,8 +34,6 @@
             <div class="col-3">
             </div>
             <div class="col-6">
-                <!-- Section to display posts -->
-                <h2>Posts</h2>
                 <div id="userposts">
                 </div>
             </div>
