--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
 <body>
     <div class="container-fluid">
-        <div class="row" style="background-color: black;">
+        <div class="row" id="headerTxt" style="background-color: black;">
             <div class="col-4">
                 <p class="small mt-3 text-light">
                     Welcome, <span id="uname" class="text-light"></span>
