--- a/userPost.html
+++ b/userPost.html
@@ -7,6 +7,7 @@
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script src="script.js"></script>
+    <script src="home.js"></script>
     <style>
         h1:hover {
             cursor: pointer
@@ -16,7 +17,7 @@
 
 <body>
     <div class="container-fluid">
-        <div class="row" style="background-color: black;">
+        <div class="row" id="headerTxt" style="background-color: black;">
             <div class="col-4">
                 <p class="small mt-3 text-light">
                     Welcome, <span id="uname" class="text-light"></span>
