add button on add or update to navigate user posts

--- a/addUpdatePost.html
+++ b/addUpdatePost.html
@@ -26,6 +26,7 @@
                 <h1 class="text-center text-light">Garage Mate</h1>
             </div>
             <div class="col-4 text-right">
+                <button id="userPost" class="btn btn-info text-right mt-2">My Post</button>
                 <button id="logout" class="btn btn-danger mt-2">Logout</button>
             </div>
         </div>
