--- a/index.html
+++ b/index.html
@@ -32,6 +32,13 @@
             </div>
         </div>
         <div class="row">
+            <div class="col-3"></div>
+            <div class="col-6">
+                <input type="search"/>
+            </div>
+            <div class="col-3"></div>
+        </div>
+        <div class="row">
            <div class="col-3">
            </div>
             <div class="col-6">
