--- a/index.html
+++ b/index.html
@@ -11,6 +11,15 @@
         h1:hover {
             cursor: pointer
         }
+
+        .status{
+            float: inline-end;
+            border-radius: 5px;
+             /* padding: 6px; */
+            font-size: 0.6rem;
+            padding: 0.3rem;
+            color: white;
+        }
     </style>
 </head>
 
@@ -44,9 +53,9 @@
             <div class="col-6">
                 <!-- Section to display posts -->
                 <div id="posts">
-                    <div class="" id="no-results" style="display: none">
+                    <div class="text-center mt-2" id="no-results" style="display: none">
                         No results found.
-                      </div>
+                    </div>
                 </div>
             </div>
             <div class="col-3">
