post status on user post view

--- a/userPost.html
+++ b/userPost.html
@@ -12,6 +12,15 @@
         h1:hover {
             cursor: pointer
         }
+        .status{
+            float: inline-end;
+            border-radius: 5px;
+             /* padding: 6px; */
+            font-size: 0.6rem;
+            padding: 0.3rem;
+            color: white;
+            margin-left: 10px;
+        }
     </style>
 </head>
 
