--- a/addUpdatePost.html
+++ b/addUpdatePost.html
@@ -179,7 +179,7 @@
                             </div>
                             <div class="col-6">
                                 <select class="form-control" id="ustatus" name="status" required>
-                                    <option value="Unresolved">Unresolved</option>
+                                    <option value="unresolved">Unresolved</option>
                                     <option value="progressing">Progressing</option>
                                     <option value="resolved">Resolved</option>
                                 </select>
