--- a/login.html
+++ b/login.html
@@ -52,7 +52,7 @@
                 <div class="col-4"></div>
                 <div class="col-4" style="background-color: black">
                     <h1 class="text-center m-5 text-light">Garage Mate</h1>
-                    <form id="loginform">
+                    <form id="registerform">
                         <div class="form-outline mt-2 text-center">
                             <label class="form-label text-light" for="name">Name</label>
                             <input type="text" id="name" class="form-control" placeholder="Enter name" required/>
