--- a/addUpdatePost.html
+++ b/addUpdatePost.html
@@ -6,8 +6,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <script src="https://code.jquery.com/jquery-3.7.1.min.js"
         integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="validation.js"></script>
     <script src="post.js"></script>
-    <script src="home.js"></script>
     <style>
         h1:hover {
             cursor: pointer
